--- a/link.html
+++ b/link.html
@@ -1,9 +1,41 @@
-<!DOCTYPE html>
 <html>
-    <body>
-
-        <a href="http;//WWW. Wikihow.com/">
-         <img src="imagefilenamehere.gif">   
-        </a>
+  <style>
+body{
+    color: black;
+    cursor: pointer;
+  text-align:center; 
+ }
+    p{
+       border: 5px solid blue;
+  padding: 15px;
+  margin: 15px;
+       } 
+    background{
+      
+    }
+</style>
+  <body>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ7ca4JTx5cBLKn9F6fd_70JHv2PReeOsEsA&s">
+    <p>você deve se conectar para continuar</p>
+    <h1>entra no facebook</h1>
+    
+  <form action="">
+            <label for="e-mail"></label>
+            <input
+             type="text"
+             id="name"
+             name="name"
+             placeholder="email ou telefone" 
+                   />
+            <label for="password"></label>
+          <input
+           type="password"
+           id="password"
+           name="password"
+          placeholder="senha"
+                 />
+       <input type="submit"  value="entrar"/>
+    <a href="">esqueceu a sua senha?</a>
+    </form>
     </body>
 </html>
