Update and rename link.html to facebook-account.html

--- a/facebook-account.html
+++ b/facebook-account.html
@@ -6,13 +6,11 @@ body{
   text-align:center; 
  }
     p{
-       border: 5px solid blue;
-  padding: 15px;
-  margin: 15px;
+       border:5px solid yellow;
+      padding: 10px;
+  margin: 10px;
+  background-color:lightyellow
        } 
-    background{
-      
-    }
 </style>
   <body>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ7ca4JTx5cBLKn9F6fd_70JHv2PReeOsEsA&s">
